--- a/pyber_FINAL.ipynb
+++ b/pyber_FINAL.ipynb
@@ -534,7 +534,7 @@
     "Observations\n",
     "1. Pyber is used the least amount in rural cities but rural cities have some of the highest average fares.\n",
     "2. Urban areas have the highest amount of Pyber drivers and account for more than 60% of Pybers total fares.\n",
-    "3. Suburban cities make up less than a third of Pyber's total fares. Rural accounts for two thirds."
+    "3. Suburban cities make up less than a third of Pyber's total fares. Rural accounts for less than 10 percent."
    ]
   }
  ],
